# primality-test

./: .gitignore  Main.hs  Prime.hs  primality-test.cabal
