name:                primality-test
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              nada
maintainer:          @nada_wagahai
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable primality-test
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       Prime
  ghc-options:         -Wall
  extensions:          OverloadedStrings
  -- other-extensions:    
  build-depends:       base ==4.*
                     , optparse-applicative
                     , primes
                     , random
                     , scotty
                     , text
                     , transformers
                     , wai-extra
